[gd_scene load_steps=6 format=3 uid="uid://w8shrbaecoig"]

[ext_resource type="Script" uid="uid://dp63gsjobyo0e" path="res://scenes/pages/create_player_page.gd" id="1_035ew"]
[ext_resource type="LabelSettings" uid="uid://28dnpigccebq" path="res://resources/label_title.tres" id="2_mfhop"]
[ext_resource type="LabelSettings" uid="uid://brby6v3ibjrh8" path="res://resources/label_normal.tres" id="3_8p145"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5t3qa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_035ew"]

[node name="CreatePlayerPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_035ew")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.8
offset_left = -4.0
offset_top = -60.0
offset_right = 4.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ExpandingSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_5t3qa")

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_5t3qa")

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Easy RPG"
label_settings = ExtResource("2_mfhop")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Username" type="LineEdit" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="Password" type="LineEdit" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Password"
alignment = 1
language = "en_US"

[node name="PasswordConfirmation" type="LineEdit" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Confirm password"
alignment = 1
language = "en_US"

[node name="SignIn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 4
icon_alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/SignIn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Sign In"
label_settings = ExtResource("3_8p145")
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_035ew")

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "or"
horizontal_alignment = 1

[node name="HSeparator6" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_035ew")

[node name="LogIn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
icon_alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/LogIn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Log In"
label_settings = ExtResource("3_8p145")
horizontal_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_5t3qa")

[node name="Message" type="RichTextLabel" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "This is an [b]error[/b]...
"
fit_content = true

[node name="HTTPRequestPlayers" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="Panel/VBoxContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Password" to="." method="_on_password_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/PasswordConfirmation" to="." method="_on_password_confirmation_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/SignIn" to="." method="_on_sign_in_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LogIn" to="." method="_on_log_in_pressed"]
